[gd_scene load_steps=14 format=2]

[ext_resource path="res://tests/fondoMarino.tscn" type="PackedScene" id=1]
[ext_resource path="res://player/Nadador.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/nivel3.gd" type="Script" id=3]
[ext_resource path="res://enemies/orca.tscn" type="PackedScene" id=4]
[ext_resource path="res://enemies/anillos.tscn" type="PackedScene" id=5]
[ext_resource path="res://player/pez.tscn" type="PackedScene" id=6]
[ext_resource path="res://sounds/final1.wav" type="AudioStream" id=7]
[ext_resource path="res://tests/Control.tscn" type="PackedScene" id=8]
[ext_resource path="res://tests/full.tscn" type="PackedScene" id=9]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -56, 48, 0, 0, 0, 0, -56, 400 )
}

[sub_resource type="Curve2D" id=2]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 48, 0, 0, 0, 0, 0, 544, 0 )
}

[sub_resource type="Curve2D" id=3]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 600, 48, 0, 0, 0, 0, 600, 400 )
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 352, 272 )

[node name="nivel3" type="Node2D"]
script = ExtResource( 3 )
orca = ExtResource( 4 )
anillo = ExtResource( 5 )
pez = ExtResource( 6 )

[node name="Nadador" parent="." instance=ExtResource( 2 )]
position = Vector2( 240, 240 )
scale = Vector2( 0.3, 0.3 )

[node name="Camera2D" type="Camera2D" parent="Nadador"]
current = true
zoom = Vector2( 0.7, 0.7 )
limit_left = -100
limit_top = 0
limit_right = 576
limit_bottom = 512

[node name="fondoMarino" parent="." instance=ExtResource( 1 )]
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="generador" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="gen_orca" type="PathFollow2D" parent="generador"]
position = Vector2( -56, 48 )
rotation = 1.5708

[node name="generador3" type="Path2D" parent="."]
curve = SubResource( 2 )

[node name="gen_anillos" type="PathFollow2D" parent="generador3"]
position = Vector2( 48, 0 )

[node name="generador2" type="Path2D" parent="."]
curve = SubResource( 3 )

[node name="gen_orca2" type="PathFollow2D" parent="generador2"]
position = Vector2( 600, 48 )
rotation = 1.5708

[node name="posicion_inicio" type="Position2D" parent="."]
position = Vector2( 304, 160 )

[node name="timer_score" type="Timer" parent="."]
wait_time = 30.0
one_shot = true

[node name="timer_orca" type="Timer" parent="."]
wait_time = 2.0

[node name="timer_anillo" type="Timer" parent="."]
wait_time = 2.0

[node name="timer_inicio" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 280, 224 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 4 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -10.0
autoplay = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" parent="CanvasLayer" instance=ExtResource( 8 )]

[node name="TouchScreenButton" parent="CanvasLayer" instance=ExtResource( 9 )]
[connection signal="timeout" from="timer_score" to="." method="_on_timer_score_timeout"]
[connection signal="timeout" from="timer_orca" to="." method="_on_timer_orca_timeout"]
[connection signal="timeout" from="timer_anillo" to="." method="_on_timer_anillo_timeout"]
[connection signal="timeout" from="timer_inicio" to="." method="_on_timer_inicio_timeout"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="pressed" from="CanvasLayer/Control/Left" to="Nadador" method="_on_Left_pressed"]
[connection signal="released" from="CanvasLayer/Control/Left" to="Nadador" method="_on_Left_released"]
[connection signal="pressed" from="CanvasLayer/Control/Right" to="Nadador" method="_on_Right_pressed"]
[connection signal="released" from="CanvasLayer/Control/Right" to="Nadador" method="_on_Right_released"]
[connection signal="pressed" from="CanvasLayer/Control/Jump" to="Nadador" method="_on_Jump_pressed"]
[connection signal="released" from="CanvasLayer/Control/Jump" to="Nadador" method="_on_Jump_released"]

[editable path="CanvasLayer/Control"]
